# ENRE-rs

./: Cargo.toml  README.md
docs/: README.md
docs/entity/: associated_item.md  constant.md  enum.md  function.md  implementation.md  method.md  module.md  static_item.md  struct.md  trait.md  type-alias.md  type_alias.md  union.md  variable.md
docs/relation/: call.md  contain.md  define.md  impl.md  inherit.md  modify.md  reference.md  use.md  use_var.md
src/: entity.rs  extractor.rs  hierarchy.rs  hir.txt  main.mir  main.rs  util.rs  visitor.rs
test/: test1.json  test1.rs  test2.json  test2.rs  test3.json  test3.rs  test4.json  test4.rs  test5.json  test5.rs  test6.json  test6.rs  test_Enum_Variant.json  test_Enum_Variant.rs  test_Union_ass.json  test_Union_ass.rs  test_cha.json  test_cha.rs  test_cha_advanced.json  test_cha_advanced.rs  test_cha_modified.rs  test_fun_para.rs  test_method_impl.json  test_method_impl.rs  test_mod.json  test_mod.rs  test_modify_usevar.json  test_modify_usevar.rs  test_reference.json  test_reference.rs  test_s_c.rs  test_struct.json  test_struct.rs  test_trait_Inherit.json  test_trait_Inherit.rs  test_typeAlias.json  test_typeAlias.rs  test_use.json  test_use.rs  test_var_con_sta.json  (+1 more)
