[package]
name = "rust-enre"
version = "0.1.0"
edition = "2024"

[dependencies]

syn = { version = "2.0.15", features = ["full", "visit","extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cargo_metadata = "0.18.1"
walkdir = "2"
toml = "0.9.5"
glob = "0.3.2"
